@@ -1,1 +1,1 @@
-{"version":"5.3-dev","releasedate":"2015-10-16"}
+{"version":"5.3-dev","releasedate":"2015-10-17"}
